[metadata]
name = faulthandler
version = 1.4
author = Victor Stinner
author_email = victor.stinner@haypocalc.com
summary = Display the Python backtrace on a crash
description_file = README
home_page = https://github.com/haypo/faulthandler/wiki/
license = BSD (2-clause)
requires_python = 2.5, 2.6, 2.7, 3.1, 3.2
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: C
    Programming Language :: Python
    Topic :: Software Development :: Debuggers
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    faulthandler

extra_files =
    setup.py
    AUTHORS
    COPYING
    MANIFEST.in
    README
    tests.py
    TODO
